--- a/client/styles/main.css
+++ b/client/styles/main.css
@@ -10429,6 +10429,10 @@ video {
   font-size: 4rem;
 }
 
+.text-7xl {
+  font-size: 5rem;
+}
+
 .leading-3 {
   line-height: .75rem;
 }
@@ -31078,6 +31082,10 @@ video {
     font-size: 4rem;
   }
 
+  .sm\:text-7xl {
+    font-size: 5rem;
+  }
+
   .sm\:leading-3 {
     line-height: .75rem;
   }
@@ -51660,6 +51668,10 @@ video {
 
   .md\:text-6xl {
     font-size: 4rem;
+  }
+
+  .md\:text-7xl {
+    font-size: 5rem;
   }
 
   .md\:leading-3 {
@@ -72246,6 +72258,10 @@ video {
     font-size: 4rem;
   }
 
+  .lg\:text-7xl {
+    font-size: 5rem;
+  }
+
   .lg\:leading-3 {
     line-height: .75rem;
   }
@@ -92828,6 +92844,10 @@ video {
 
   .xl\:text-6xl {
     font-size: 4rem;
+  }
+
+  .xl\:text-7xl {
+    font-size: 5rem;
   }
 
   .xl\:leading-3 {
